# the-final-test

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  Задание.txt
1-5/: 1-5.txt
10/: 10.txt
11-12/: 12.txt
13-15/C++/: CMakePresets.json  main.cpp
13-15/C++/inc/: Animal.h  AnimalRegistry.h  Camel.h  Cat.h  Counter.h  Dog.h  DomesticAnimal.h  Donkey.h  Hamster.h  Horse.h  PackAnimal.h
13-15/C++/src/: AnimalRegistry.cpp  DomesticAnimal.cpp  PackAnimal.cpp
13-15/JAVA/src/: Main.java
13-15/JAVA/src/animals/: Animal.java
13-15/JAVA/src/animals/domestic/: Cat.java  Dog.java  DomesticAnimal.java  Hamster.java
13-15/JAVA/src/animals/pack/: Camel.java  Donkey.java  Horse.java  PackAnimal.java
13-15/JAVA/src/registry/: AnimalRegistry.java
13-15/JAVA/src/util/: Counter.java
13-15/inc/: Animal.h
13-15/src/animals/pack/: PackAnimal.java
3/: 3
7/: 7.txt
7-12/: frends_of_human.sql
8/: 8.txt
9/: 9.txt
inc/: Animal.h
src/: Animal.cpp
